// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarTypes should have specific types: toolbarTypes 1`] = `
Object {
  "getOptions": [Function],
}
`;

exports[`ToolbarTypes should return an output for options selection: getOptionsType 1`] = `
Object {
  "options": Array [
    Object {
      "title": "t(curiosity-toolbar.slaPremium)",
      "value": "premium",
    },
    Object {
      "title": "t(curiosity-toolbar.slaStandard)",
      "value": "standard",
    },
    Object {
      "title": "t(curiosity-toolbar.slaSelfSupport)",
      "value": "self-support",
    },
    Object {
      "title": "t(curiosity-toolbar.slaNone)",
      "value": "",
    },
  ],
  "selected": null,
}
`;

exports[`ToolbarTypes should return an output for options selection: getOptionsType:null 1`] = `
Object {
  "options": Array [],
}
`;

exports[`ToolbarTypes should return an output for options selection: getOptionsType:sla 1`] = `
Object {
  "options": Array [
    Object {
      "title": "t(curiosity-toolbar.slaPremium)",
      "value": "premium",
    },
    Object {
      "title": "t(curiosity-toolbar.slaStandard)",
      "value": "standard",
    },
    Object {
      "title": "t(curiosity-toolbar.slaSelfSupport)",
      "value": "self-support",
    },
    Object {
      "title": "t(curiosity-toolbar.slaNone)",
      "value": "",
    },
  ],
  "selected": null,
}
`;
